# ubuntu-task-manager

./: CMakeCache.txt  CMakeLists.txt  Makefile  README  cmake_install.cmake  err  final  graph  graph.c  main.c  mem_swap  mem_swap.c  memory_info.c  memory_info.h  network  network.c  process_info.c  process_info.h  system_info.c  system_info.h  task_manager  test  test.c
gui/: .tabs_memory.c.swp  tabs_cpu.c  tabs_cpu.h  tabs_memory.c  tabs_memory.h  tabs_process.c  tabs_process.h  tabs_prpc  tabs_system.c  tabs_system.h
